# game-boy-emulator

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  conan_build.sh  conanfile.py  conanfile.txt  emserver.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
.github/workflows/actions/: release.yml
.github/workflows/actions/setup/: action.yml
bindings/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
cmake/modules/: FindClangFormat.cmake  ccache.cmake  clang-format.cmake  clang-tidy.cmake
profiles/: _common  _linux_x86_64_release  clang-20  gcc-14
src/: CMakeLists.txt  example.cpp  main.cpp
src/game-boy-emulator/: addressbus.cpp  addressbus.hpp  apu.cpp  apu.hpp  audio.cpp  audio.hpp  audiochannel.cpp  audiochannel.hpp  bitmanipulation.cpp  bitmanipulation.hpp  bootrom.cpp  bootrom.hpp  cartridge.cpp  cartridge.hpp  cartridge_info.hpp  clocktimer.cpp  clocktimer.hpp  constants.h  cpu.cpp  cpu.hpp  dmatransfer.cpp  dmatransfer.hpp  emscripten_browser_file.hpp  emulator.cpp  emulator.hpp  exceptions.cpp  exceptions.hpp  framebuffer.hpp  framebuffer.tpp  gpu.cpp  gpu.hpp  graphics.cpp  graphics.hpp  i_mmu.hpp  image.cpp  image.hpp  image.tpp  interrupthandler.cpp  interrupthandler.hpp  io.cpp  (+47 more)
src/game-boy-emulator/facades/: flag.cpp  flag.hpp  incrementpc.cpp  incrementpc.hpp  memory.cpp  memory.hpp  programcounter.cpp  programcounter.hpp  pushstack.cpp  pushstack.hpp  register.hpp  stack.cpp  stack.hpp
src/game-boy-emulator/instructions/: callimmediate.cpp  callimmediate.hpp  callintermediary.cpp  callintermediary.hpp  copyregister.cpp  copyregister.hpp  increment.cpp  increment.hpp  loadimmediateword.cpp  loadimmediateword.hpp  loadwordimmediate.cpp  loadwordimmediate.hpp  popstack.cpp  popstack.hpp  pushregister.cpp  pushregister.hpp  return.cpp  return.hpp  rotateleft.cpp  rotateleft.hpp
src/tests/: CMakeLists.txt  blargg1.txt.REMOVED.git-id  blargg2.txt.REMOVED.git-id  blargg3.txt.REMOVED.git-id  test_bitmanipulation.cpp  test_blargg10_comparison.cpp  test_blargg11_comparison.cpp  test_blargg1_comparison.cpp  test_blargg2_comparison.cpp  test_blargg3_comparison.cpp  test_blargg4_comparison.cpp  test_blargg5_comparison.cpp  test_blargg6_comparison.cpp  test_blargg7_comparison.cpp  test_blargg8_comparison.cpp  test_blargg9_comparison.cpp  test_boot_rom_comparison.cpp  test_cartridge.cpp  test_cpu.cpp  test_dmg_acid2.cpp  test_framebuffer.cpp  test_graphics.cpp  test_helpers.cpp  test_helpers.hpp  test_instruction_timing.cpp  test_joypad.cpp  test_mem_timing.cpp  test_mooneye_mbc1.cpp  test_mooneye_mbc5.cpp  test_mooneye_oam_dma.cpp
src/tests/recorded-logs/: BootromLog.txt
src/tests/roms/: stub-game-long-title.gb  stub-game-normal-title.gb  stub-game.gb
tests/: CMakeLists.txt  test_bitmanipulation.cpp  test_boot_rom_comparison.cpp  test_call_immediate.cpp  test_call_intermediary.cpp  test_cpu.cpp  test_graphics.cpp  test_increment_instruction.cpp  test_load_register_from_register.cpp  test_mmu.cpp  test_pop_stack.cpp  test_push_register.cpp  test_registers.cpp  test_return.cpp  test_rotate_left.cpp
